<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_all_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_good_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_val"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="14dp"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/ic_close_red_24dp"
                        tools:ignore="VectorDrawableCompat" />

                    <LinearLayout
                        android:id="@+id/layout_good_info_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_number_transaction"
                            style="@style/style_text_number"
                            android:text="№00655" />

                        <TextView
                            android:id="@+id/text_date_transaction"
                            style="@style/style_text_date"
                            android:layout_marginTop="2dp"
                            android:text="15.10.2019 17:11 (изм.)" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_good_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <LinearLayout
                        android:id="@+id/layout_good_from"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_secondary_from"
                            style="@style/style_text_secondary"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_secondary_from" />

                        <TextView
                            android:id="@+id/text_main_from"
                            style="@style/style_text_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="4dp"
                            android:text="07. Склад Васюково" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_good_to"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_secondary_to"
                            style="@style/style_text_secondary"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_secondary_to" />

                        <TextView
                            android:id="@+id/text_main_to"
                            style="@style/style_text_main"
                            android:layout_width="match_parent"
                            android:paddingEnd="4dp"
                            android:text="05. Кухня" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_good_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <LinearLayout
                        android:id="@+id/layout_good_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_secondary_author"
                            style="@style/style_text_secondary"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_secondary_author" />

                        <TextView
                            android:id="@+id/text_main_author"
                            style="@style/style_text_main"
                            android:text="Исупов О." />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_good_sum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_secondary_cost"
                            style="@style/style_text_secondary"
                            android:layout_marginBottom="4dp"
                            android:text="@string/text_secondary_cost" />

                        <TextView
                            android:id="@+id/text_main_cost"
                            style="@style/style_cost"
                            android:text="14 472,00 руб" />
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:id="@+id/divider_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/color_divider" />

                <TextView
                    android:id="@+id/text_goods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/text_goods"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <ProgressBar
                    android:id="@+id/progress_goods"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="12dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_goods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="12dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="horizontal"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <TextView
                        android:id="@+id/text_main_sum"
                        style="@style/style_text_main"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/text_main_sum"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_sum"
                        style="@style/style_cost"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="14 472,00 руб" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_bottom_horizontal "
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_create"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/btn_create" />

                    <LinearLayout
                        android:id="@+id/layout_text_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp">

                        <TextView
                            android:id="@+id/text_name_apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:id="@+id/text_date_apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>